--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Snake</h1>
+  <div class="conteiner_block">
+    <div class="block first_block">1</div>
+    <div class="block second_block">2</div>
+    <div class="block three_block">3</div>
+    <div class="block four_block">4</div>
+    <div class="block five_block">5</div>
+    <div class="block six_block">6</div>
+  </div>
 </body>
 </html>
